inheritance/inheritance280_output.txt
inheritance$ g++ inheritance280.cpp 
inheritance280.cpp: In function ‘int main()’:
inheritance280.cpp:59:15: error: qualified-id in declaration before ‘=’ token
   59 |     int D::si = 7;
      |               ^
inheritance$ 
